# package-store

./: .env.example  .gitignore  docker-compose.yaml  readme.md
auth-service/: pyproject.toml
auth-service/docker/: Dockerfile.dev
auth-service/migrations/: env.py
auth-service/migrations/versions/: 9dcdf5241a7d_added_users_and_refresh_token_table.py
auth-service/src/: app.py  config.py  ioc.py
auth-service/src/application/: auth_service.py
auth-service/src/domain/: schemas.py
auth-service/src/infrastructure/: __init__.py  models.py
auth-service/src/infrastructure/oauth/: providers.py
auth-service/src/infrastructure/repositories/: refresh_token.py  user.py
auth-service/src/infrastructure/security/: jwt_service.py
auth-service/src/presentation/: auth.py
billing-service/: pyproject.toml
billing-service/migrations/versions/: 66b5dca6da3d_added_order_and_webhook_event_and_.py
billing-service/src/: app.py  config.py  ioc.py
billing-service/src/application/: billing_service.py
billing-service/src/domain/: schemas.py
billing-service/src/infrastructure/: __init__.py  models.py
billing-service/src/infrastructure/broker/: events.py
billing-service/src/infrastructure/repositories/: order.py
billing-service/src/infrastructure/resources/: broker.py  database.py
billing-service/src/infrastructure/stripe/: service.py
billing-service/src/presentation/: billing.py
bot-service/: pyproject.toml
bot-service/docker/: Dockerfile.dev
bot-service/src/: app.py  config.py  ioc.py
bot-service/src/application/: event_handler.py
bot-service/src/domain/: schemas.py
bot-service/src/infrastructure/: telegram.py
bot-service/src/infrastructure/broker/: subscribers.py
bot-service/src/infrastructure/resources/: broker.py
